--- a/angular.json
+++ b/angular.json
@@ -23,7 +23,13 @@
                 "glob": "**/*",
                 "input": "public"
               },
-              "src/assets"
+              "src/assets",
+              "src/favicon.ico",
+              {
+                "glob": "**/*",
+                "input": "node_modules/leaflet/dist/images",
+                "output": "/assets/leaflet/"
+              }
             ],
             "styles": [
               "src/styles.css",
